Add github link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ Console:
   <li id="link-to-mock-console"><a href="?">Output to Mock Console</a></li>
 </ul>
 
+<hr size="1" />
+<a href="https://github.com/hotoo/perf-javascript-error">Fork me on GitHub</a>
+
 <script>
 var __isBrowser__ = true;
 var __cache_console__ = location.search.indexOf('stdout=console') === -1;
