Add QR code for perview page url

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ Console:
 <hr size="1" />
 <a href="https://github.com/hotoo/perf-javascript-error">Fork me on GitHub</a>
 
+<img src="./qrcode-preview.png" alt="QR code for preview page url." />
+
 <script>
 var __isBrowser__ = true;
 var __cache_console__ = location.search.indexOf('stdout=console') === -1;
